[package]
name = "blog-tools"
version = "0.1.1"
edition = "2021"
authors = ["Indigo Curnick <indigocurnick@gmail.com>"]
description = "A collection of tools that helps make blogs in Rust"
readme = "README.md"
repository = "https://github.com/IndigoCurnick/blog-tools"
license = "MIT"
keywords = ["blog", "website", "rocket", "templates"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.77"
walkdir = "2.3.2"
chrono = { version = "0.4.23", features = ["serde"] }
markdown = "1.0.0-alpha.11"
tl = "0.7.8"


[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tera = "1.15.0"
rocket = "0.5.0"
rocket_codegen = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
lazy_static = "1.4.0"
